--- a/Prionti/book.html
+++ b/Prionti/book.html
@@ -335,7 +335,7 @@ Maybe it was destiny, or maybe it was just luck—but whatever it was, I’m gla
           </p>
         </div>
         <div class="back">
-          <img src="./1.jpg" alt="Img 1" />
+          <img src="740ecddf-6d43-4ed6-9ee2-cad8480c37bb.jpg" alt="Img 1" />
         </div>
       </div>
       <!--3rd page-->
@@ -382,7 +382,7 @@ No challenge is too big for you, and no goal is out of reach. You inspire those 
           </p>
         </div>
         <div class="back">
-          <img src="./2.jpg" alt="Img 1" />
+          <img src="5184ed9b-dc35-4d15-bf2d-d42d30ff7fc5.jpg" alt="Special Image">
         </div>
       </div>
       <!--5th page-->
@@ -471,7 +471,7 @@ No challenge is too big for you, and no goal is out of reach. You inspire those 
 
       <div class="page">
         <div class="front">
-          <img src="./4.png" alt="Img 1" />
+          <img src="c8782fb2-27ea-4bba-8589-868a125e983e.jpg" alt="Special Image" />
         </div>
         <div class="back cover">
           
