--- a/book.html
+++ b/book.html
@@ -390,7 +390,7 @@ No challenge is too big for you, and no goal is out of reach. You inspire those 
         <div class="front">
           <h1>A Wish from the Heart 💫💖</h1>
           <p>
-            Sometimes, I find myself wishing I could meet you in person, just to see the smile that brightens my day and hear the voice that makes everything feel lighter. Maybe it’s a long shot, but the thought still lingers.
+            Every moment with you feels like magic, and I find myself wishing I could be the one to make you smile every day, to hear your voice, and to share all the beautiful moments life has to offer. I can imagine a future without you,but its colorless mostly. Maybe it’s a long shot, but the thought still lingers.
 
             Even though we’ve only known each other for a short time, I hope you won’t forget me. Our moments, our conversations—they mean more to me than you might realize.
             
